# blueberrypy

./: .gitmodules  CMakeLists.txt  GattClient.py  README.md  adm.py  blueberrypyhelper.py  client.py  exampleClient.py  exampleScanner.py  scanner.py  test.py
docs/: _config.yml  index.md
linux/: BleAdvertisement.cpp  BleAdvertisement.h  BtAdapter.cpp  BtAdapter.h  GattCharacteristic.cpp  GattCharacteristic.h  GattClient.cpp  GattClient.h  GattDescriptor.cpp  GattDescriptor.h  GattService.cpp  GattService.h  GattUtilities.cpp  GattUtilities.h  MainLoop.cpp  MainLoop.h
python_bindings/: blueberrypy.cpp  blueberrypy.h
